test/ddc-spec/error/01-ErrorExp/02-ExportDuplicate/Test.ds

module Test
export foo
export foo
where
